# django-starter-sample

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
conf/: gunicorn.conf.py
starter/: asgi.py  settings.py  urls.py  wsgi.py
