[tool.poetry]
name = "django-starter-sample"
version = "0.1.0"
description = ""
authors = ["Hans Tognon <git@tobihans.space>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.3"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
